Created Detailed View

--- a/AndroidFrontEnd/AndroidManifest.xml
+++ b/AndroidFrontEnd/AndroidManifest.xml
@@ -13,5 +13,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginActivity"/>
+        <activity android:name=".LocationDetailsActivity"/>
     </application>
 </manifest>
