--- a/AndroidFrontEnd/AndroidManifest.xml
+++ b/AndroidFrontEnd/AndroidManifest.xml
@@ -4,7 +4,7 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="16"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name" android:icon="@drawable/apple_icon">
         <activity android:name="MyActivity"
                   android:label="@string/app_name">
             <intent-filter>
